--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,1 +1,3 @@
-clean
+<ngx-spinner bdColor="rgba(0, 0, 0, 0.8)" size="large" color="#000000" type="square-jelly-box"></ngx-spinner>
+<app-account></app-account>
+
