--- a/frontend/src/app/_shared/ui/header/header.component.html
+++ b/frontend/src/app/_shared/ui/header/header.component.html
@@ -8,15 +8,15 @@
     <div class="collapse navbar-collapse" id="navbarResponsive" [ngClass]="{'show': navToggle}">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" routerLink="/dashboard">Home</a>
+              <a class="nav-link" routerLink="/dashboard">Account</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" routerLink="/items">Items</a>
+              <a class="nav-link" routerLink="/items">Disk</a>
             </li>
             <li class="nav-item">
                 <a href="javascript:void(0)" class="nav-link" (click)="logout()">Logout</a>
             </li>
-          </ul>    
+          </ul>
     </div>
   </div>
 </nav>
