--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,31 @@
 <div class="container">
-  <h1>Dashboard</h1>
-  <p>To epic shit here!</p>
+  <h1>Personal account</h1>
+
+  <span>Free space</span>
+  <div class="progress">
+    <div #diskProgress class="progress-bar bg-info" role="progressbar" style="width: 25% " aria-valuenow="[progress]"
+         aria-valuemin="[progress]" aria-valuemax="100">{{progress}}</div>
+  </div>
+
+  <!--  <div class="dropdown" style="padding-top: 20px;">-->
+  <!--    <span style="color: dimgrey; padding: 10px;">Current subscription type</span>-->
+  <!--    <button class="btn btn-secondary dropdown-toggle" style="padding: 10px" data-toggle="dropdown" id="SubItemsMenu" aria-haspopup="true" aria-expanded="false">-->
+  <!--      {{currentType}}-->
+  <!--    </button>-->
+  <!--    <div class="dropdown-menu" aria-labelledby="SubItemsMenu">-->
+  <!--      <a class="dropdown-item" href="#">{{subTypes[0]}}</a>-->
+  <!--      <a class="dropdown-item" href="#">{{subTypes[1]}}</a>-->
+  <!--      <a class="dropdown-item" href="#">{{subTypes[2]}}</a>-->
+  <!--    </div>-->
+  <!--  </div>-->
+  <!--  -->
+  <!--  -->
+  <div class="dropdown">
+<!--    <p-dropdown-->
+<!--      [(ngModel)]="currentType"-->
+<!--      id="typeDropdown"-->
+<!--      name="typeDropdown"-->
+<!--      >-->
+<!--    </p-dropdown>-->
+  </div>
 </div>
