--- a/frontend/src/app/items/items.component.html
+++ b/frontend/src/app/items/items.component.html
@@ -1,6 +1,5 @@
 <div class="container">
-  <h1>Items</h1>
-
+  <h1>Folders</h1>
   <div class="row">
 
     <div class="col-md-8">
@@ -16,7 +15,34 @@
     <div class="col-md-4">
         <app-item-add-edit></app-item-add-edit>
     </div>
-    
+
+
+
   </div>
 
 </div>
+
+<!--<div class="container">-->
+<!--  &lt;!&ndash; Content here &ndash;&gt;-->
+<!--  <ul class="nav nav-pills">-->
+<!--    <li class="nav-item">-->
+<!--      <a class="nav-link active" href="#">Active</a>-->
+<!--    </li>-->
+<!--    <li class="nav-item dropdown">-->
+<!--      <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>-->
+<!--      <div class="dropdown-menu">-->
+<!--        <a class="dropdown-item" href="#">Action</a>-->
+<!--        <a class="dropdown-item" href="#">Another action</a>-->
+<!--        <a class="dropdown-item" href="#">Something else here</a>-->
+<!--        <div class="dropdown-divider"></div>-->
+<!--        <a class="dropdown-item" href="#">Separated link</a>-->
+<!--      </div>-->
+<!--    </li>-->
+<!--    <li class="nav-item">-->
+<!--      <a class="nav-link" href="#">Link</a>-->
+<!--    </li>-->
+<!--    <li class="nav-item">-->
+<!--      <a class="nav-link disabled" href="#">Disabled</a>-->
+<!--    </li>-->
+<!--  </ul>-->
+<!--</div>-->
